Changing The Icon Logo

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			  <div class="container-fluid ">
 				<div class="navbar-header">
 				<button type="button" class="navbar-toggle glyphicon glyphicon-menu-hamburger" data-toggle="collapse" data-target="#collNav"></button>	
-				  <a href="javascript:void[0]" class="pull-left headerImg" onClick="goTo('',this)" style="padding-top:4px;padding-right:6px"><img src="http://www.insanelymac.com/forum/index.php?app=downloads&module=display&section=screenshot&record=21364&id=397&full=1"class="img-responsive img-rounded" style="height:40px" title="Easy Kext Installer"></a>
+				  <a href="javascript:void[0]" class="pull-left headerImg" onClick="goTo('',this)" style="padding-top:4px;padding-right:6px"><img src="assets/img/Easy_Logo.png"class="img-responsive img-rounded" style="height:40px" title="Easy Kext Installer"></a>
 				</div>
 				<div class="collapse navbar-collapse text-center" id="collNav">
 					<ul class="nav navbar-nav" id="navigationBar">
