Added iMac Frame App Demo Pictures

--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
 			$('#demo').frameCarousel({   //iMac Frame Slider 
 				autoplay:true,
 				collapseThreshold: 450,
-				/*images: ['path/to/frame-carousel/sample/1.jpg',
-						'path/to/frame-carousel/sample/2.jpg',
-						'path/to/frame-carousel/sample/10.jpg'],	 */
+				images: ['assets/img/img1.png',
+						'assets/img/img2.png',
+						'assets/img/img3.png']
 			});
 		});
 	
